File URLs should not be encoded, so added Resource.encode() method that only encodes for resource types that need it.
This fixes the space in filename problem for JVMs that cannot handle
%20 in file URLs