@@ -87,9 +87,7 @@ public abstract class Resource implements Serializable
                         resource=resource.substring(2);
                     
                     File file=new File(resource).getCanonicalFile();
-                    url=file.toURL();
-                    // Correct for bad JVMs that don't encode path.
-                    url=new URL("file:"+URI.encodePath(url.toString().substring(5)));
+                    url=file.toURL();                    
                     
                     URLConnection connection=url.openConnection();
                     FileResource fileResource= new FileResource(url,connection,file);
@@ -267,18 +265,30 @@ public abstract class Resource implements Serializable
      * The resource names are not URL encoded.
      */
     public abstract String[] list();
-    
 
     /* ------------------------------------------------------------ */
     /**
      * Returns the resource contained inside the current resource with the
      * given name.
-     * @param path The path segment to add, which should be URL encoded. 
+     * @param path The path segment to add, which should be encoded by the
+     * encode method. 
      */
     public abstract Resource addPath(String path)
         throws IOException,MalformedURLException;
     
 
+    /* ------------------------------------------------------------ */
+    /** Encode according to this resource type.
+     * The default implementation calls URI.encodePath(uri)
+     * @param uri 
+     * @return String encoded for this resource type.
+     */
+    public String encode(String uri)
+    {
+        return URI.encodePath(uri);
+    }
+    
+        
     /* ------------------------------------------------------------ */
     public Object getAssociate()
     {
@@ -320,6 +330,5 @@ public abstract class Resource implements Serializable
         {
             in.close();
         }
-    }
-    
+    }    
 }
